--- a/Views/FixturePurchase/LastPass.cshtml
+++ b/Views/FixturePurchase/LastPass.cshtml
@@ -30,7 +30,7 @@
 <body>
     <div class="panel-body" style="padding-bottom:0px;">
         <div>
-            
+
             <table id="PurchaseTable" class="table-striped"></table>
         </div>
     </div>
@@ -41,7 +41,7 @@
                 AddRecord("addform", "/FixturePurchase/AddPurChaseRecord", "addPurchaseModal", "PurchaseTable");
             }
         }
-    
+
 
         // 行样式
         function rowStyle(row, index) {
@@ -54,68 +54,71 @@
          * 数据列
          * */
         var columns = [
-           {
-            field: 'AppBy',
-            title: '用户编号',
-            visable: true,
-            sortable: true,
-            align: 'center',
-        }, {
-            field: 'AppByName',
-            title: '用户名',
-            visable: true,
-            align: 'center',
+            {
+                field: 'AppBy',
+                title: '用户编号',
+                visable: true,
+                sortable: true,
+                align: 'center',
+            }, {
+                field: 'AppByName',
+                title: '用户名',
+                visable: true,
+                align: 'center',
 
-        }, {
-            field: 'FamilyID',
-            title: '类型编号',
-            visable: true,
-            align: 'center',
-        }, {
-            field: 'Code',
-            title: '夹具编号',
-            visable: true,
-            align: 'center',
-        }, {
-            field: 'SeqID',
-            title: '夹具序列号',
-            visable: true,
-            align: 'center',
-        }, {
-            field: 'BillNo',
-            title: '采购单号',
-            visable: true,
-            align: 'center',
-        }, {
-            field: 'RegDate',
-            title: '采购时间',
-            visable: true,
-            align: 'center',
-        }, {
-            field: 'Pic',
-            title: '图片',
-            visable: true,
-            align: 'center',
-        }, {
-            field: 'State',
-            title: '审查状态',
-            visable: true,
-            align: 'center',
-        },
-        {
-            field: 'Operation',
-            title: '操作',
-            //events: operationEvents,
-            align: 'center',
-            formatter: function (value, row, index) {
-                return [
-                    '<div class="btn-group">',
-                    '<button id="btn_update"  type="button" class="btn btn-warning" onclick="update(this)" data-toggle="modal" ><i  aria-hidden="true"></i><span>终审通过√</span></button>',
-                    '<button id="btn_delete"  type="button" class="btn btn-danger" onclick="del(this)"><i  aria-hidden="true"  ></i><span>×驳回</span></button>',
-                    '</div>'
-                ].join(' ');
-            }
-        },]
+            }, {
+                field: 'FamilyID',
+                title: '类型编号',
+                visable: true,
+                align: 'center',
+            }, {
+                field: 'Code',
+                title: '夹具编号',
+                visable: true,
+                align: 'center',
+            }, {
+                field: 'SeqID',
+                title: '夹具序列号',
+                visable: true,
+                align: 'center',
+            }, {
+                field: 'BillNo',
+                title: '采购单号',
+                visable: true,
+                align: 'center',
+            }, {
+                field: 'RegDate',
+                title: '采购时间',
+                visable: true,
+                align: 'center',
+                formatter: function (value, row, index) {
+                    return changeDateFormat(value)
+                }
+            }, {
+                field: 'Pic',
+                title: '图片',
+                visable: true,
+                align: 'center',
+            }, {
+                field: 'State',
+                title: '审查状态',
+                visable: true,
+                align: 'center',
+            },
+            {
+                field: 'Operation',
+                title: '操作',
+                //events: operationEvents,
+                align: 'center',
+                formatter: function (value, row, index) {
+                    return [
+                        '<div class="btn-group">',
+                        '<button id="btn_update"  type="button" class="btn btn-warning" onclick="update(this)" data-toggle="modal" ><i  aria-hidden="true"></i><span>终审通过√</span></button>',
+                        '<button id="btn_delete"  type="button" class="btn btn-danger" onclick="del(this)"><i  aria-hidden="true"  ></i><span>×驳回</span></button>',
+                        '</div>'
+                    ].join(' ');
+                }
+            },]
 
         function del(obj) {
 
