--- a/Views/FixtureRepair/Apply.cshtml
+++ b/Views/FixtureRepair/Apply.cshtml
@@ -157,7 +157,7 @@
 
             },
             {
-                field: 'DealDes',
+                field: 'DealRes',
                 title: '处理描述',
                 visable: true,
                 align: 'center',
