--- a/Views/FixtureRepair/DealWith.cshtml
+++ b/Views/FixtureRepair/DealWith.cshtml
@@ -93,7 +93,7 @@
 
             },
             {
-                field: 'DealDes',
+                field: 'DealRes',
                 title: '处理描述',
                 visable: true,
                 align: 'center',
